lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_atom-5.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    I64(
        I64Lit {
            base: Dec,
            value: "42",
            span: Span {
                start: 0,
                end: 2,
            },
        },
    ),
)
