lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_atom-6.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    String(
        StrLit {
            text: None,
            span: Span {
                start: 0,
                end: 2,
            },
        },
    ),
)
