lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_atom-7.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    String(
        StrLit {
            text: Some(
                StrText {
                    inner: "hello\nworld",
                    span: Span {
                        start: 1,
                        end: 13,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 14,
            },
        },
    ),
)
