lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_atom-8.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    Char(
        CharLit {
            text: None,
            span: Span {
                file: FileId(
                    0,
                ),
                start: 0,
                end: 2,
            },
        },
    ),
)
