lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_atom.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_atom()
---
Ok(
    Bool(
        BoolLit {
            value: true,
            span: Span {
                start: 0,
                end: 4,
            },
        },
    ),
)
