lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_call-3.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Call(
        Call {
            callee: Call(
                Call {
                    callee: Call(
                        Call {
                            callee: I64(
                                I64Lit {
                                    base: Dec,
                                    value: "2",
                                    span: Span {
                                        start: 0,
                                        end: 1,
                                    },
                                },
                            ),
                            args: [
                                Ident(
                                    Ident {
                                        raw: "one",
                                        span: Span {
                                            start: 2,
                                            end: 5,
                                        },
                                    },
                                ),
                            ],
                            span: Span {
                                start: 0,
                                end: 6,
                            },
                        },
                    ),
                    args: [
                        Ident(
                            Ident {
                                raw: "two",
                                span: Span {
                                    start: 7,
                                    end: 10,
                                },
                            },
                        ),
                        Ident(
                            Ident {
                                raw: "three",
                                span: Span {
                                    start: 12,
                                    end: 17,
                                },
                            },
                        ),
                    ],
                    span: Span {
                        start: 0,
                        end: 18,
                    },
                },
            ),
            args: [
                Ident(
                    Ident {
                        raw: "four",
                        span: Span {
                            start: 19,
                            end: 23,
                        },
                    },
                ),
            ],
            span: Span {
                start: 0,
                end: 24,
            },
        },
    ),
)
