lambc_parse/src/snapshots/lambc_parse__parse__tests__parses_call.snap
---
source: lambc_parse/src/parse.rs
expression: parser.parse_expr()
---
Ok(
    Call(
        Call {
            callee: I64(
                I64Lit {
                    base: Dec,
                    value: "2",
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
            ),
            args: [
                Ident(
                    Ident {
                        raw: "one",
                        span: Span {
                            start: 2,
                            end: 5,
                        },
                    },
                ),
            ],
            span: Span {
                start: 0,
                end: 6,
            },
        },
    ),
)
